--- a/Lesson_1/tasks/ex.1
+++ b/Lesson_1/tasks/ex.1
@@ -18,4 +18,11 @@ user_sername= str(input("Какая у вас фамилия? "))
 user_age= int(input("Сколько вам полных лет? "))
 user_number= int(input("Любое целое число: "))
 print ("Здравствуйте, ", user_name, user_sername, ".", "Вам ", user_age, "полных лет.", "И вы выбрали число ", user_number, ".")
-  
+_____________________________
+Введите перое число >>> 10
+Введите второе число >>> 5
+10+5=15
+Введите ваше имя >>> Anna
+Введите ваш возраст >>> 27
+Привет, Anna! Тебе 27 лет.
+    
