--- a/Lesson_1/tasks/ex.2
+++ b/Lesson_1/tasks/ex.2
@@ -17,6 +17,6 @@ seconds = time % 60
 
 print(f"{time} секунд равно >>> {hours:>02}:{minutes:>02}:{seconds:>02}")
 __________________
-# Введите время в секундах >>> 1000
-# 1000 секунд равно >>> 00:16:40
+Введите время в секундах >>> 1000
+1000 секунд равно >>> 00:16:40
  
