--- a/Lesson_1/tasks/ex.4
+++ b/Lesson_1/tasks/ex.4
@@ -1,28 +1,16 @@
-# Пользователь вводит целое положительное число.
-# Найдите самую большую цифру в числе.
-# Для решения используйте цикл while и арифметические операции.
-
+"""
+4.Пользователь вводит целое положительное число.
+Найдите самую большую цифру в числе.
+Для решения используйте цикл while и арифметические операции.
+"""
 number = input("Введите целое положительное число >>> ")
 
-if not number.isdigit():
+if not number.isdigit():   # проверка на то, что введенное значение - целое число
     print("Вы ввели неверный формат числа. Перезапустите программу и попробуйте снова.")
     exit()
 
 number = int(number)
 
-# Ver-1
-# number_max = 0  # перемееная для хранения макс значения
-#
-# while number and number_max != 9:
-#     var = number % 10  # берём последнюю цифру в числе
-#     number //= 10  # уменьшаем на одну цифру наше число
-#     if var > number_max:
-#         number_max = var
-#     else:
-#         number_max
-# # print(number_max)
-
-# Ver-2
 maximum = number % 10  # выделяем последнюю цифру числа и предполагаем, что она максимальна
 number //= 10  # избавились от последней цифры в числе, т.е. если было 123456, то теперь 12345
 
@@ -30,4 +18,8 @@ while number and maximum != 9:
     if number % 10 > maximum:  # если следующая цифра оказывается больше последней цифры, то...
         maximum = number % 10  # ...то записываем её в максимум
     number //= 10
-print(maximum)
+print(f"max = {maximum}")
+__________________
+Введите целое положительное число >>> 83748264701
+max = 8
+ 
